# bot_analises_futebol

./: README.md  pyproject.toml
